grassfeeder (0.1.4) unstable; urgency=low

  * Feed Error display sorted by time
  * Create debian updating repository
  * Improved drag url recognition: www.netjstech.com
  * create gzipped the changelog
  
  
  - Error DB: limit entries

 -- Marcus der Schlegler <schleglermarcus@posteo.de>  Sun, 13 Nov 2022 00:22:00 +0000

grassfeeder (0.1.3) unstable; urgency=low

  * Unix termination signal handling
  * Creating *.rpm:  retaining the appliation name
  * Permitting apostroph in message titles
  * Created rpm package, from debian, Suse, fedora
  * Created AppImage, from debian, Suse, fedora
  * Bugfix: new message does not show up in list
  * Bugfix: Settings Dialog / Font Manual Switch:  height adapted

 -- Marcus der Schlegler <schleglermarcus@posteo.de>  Thu, 10 Nov 2022 00:22:00 +0000

grassfeeder (0.1.2) unstable; urgency=low

  * Message List: set scroll position to upper edge from Cursor
  * Settings Dialog  : switches to even length
  * AppImage: using auto_link  inflates the size from 4.3MB to 25MB, with some spared libs.
  * Adding default icon 128x128
  * Create rpm  package
  * Bugfix: resolved crash on font size change
  * Bugfix: don't update the list if we are there already
  * Bugfix: mark-as-read shall update the list
  * Bugfix: launch multiple messages in browser shall trigger the tree sum display

 -- Marcus der Schlegler <schleglermarcus@posteo.de>  Sat, 05 Nov 2022 00:22:00 +0000

grassfeeder (0.1.1) unstable; urgency=low

  * DragAndDrop for Websites on Subscription Area
  * Bugfix: parsed blogger.com - wrong element recognized as link
  * Browser Progress display
  * Zipped the test files

 -- Marcus der Schlegler <schleglermarcus@posteo.de>  Mon, 30 Oct 2022 00:18:00 +0000

grassfeeder (0.1.0) unstable; urgency=low

  * Application Icon for Systray
  * Message List, new focus policy: before last unread
  * Reduced timer generated load when minimized
  * Importing opml: adding homepage address
  * Keyboard: Space -> open in browser