@@ -3,7 +3,8 @@ Sun, 13 Nov 2022 00:22:00 +0000
 * Create debian updating repository
 * Improved drag url recognition: www.netjstech.com
 * create gzipped changelog
+* Bugfix About Dialog reopen fail.
+* add gzipped changelog to *.deb file
 
 
 - Error DB: limit entries
-- add gzipped changelog to *.deb file
