@@ -1,4 +1,3 @@
-// use flate2::bufread::GzEncoder;
 use flate2::write::GzEncoder;
 use flate2::Compression;
 use resources::changelog_debian;
@@ -17,16 +16,8 @@ pub fn write_changelog() {
         "unstable; urgency=low",
         "Marcus der Schlegler <schleglermarcus@posteo.de>",
     );
-
-    // let compressed_file = File::create("backup.tar.gz")?;
-    // let mut encoder = GzEncoder::new(compressed_file, Compression::Default);
-    // encoder.write(&archive.into_inner()?)?;
-    // encoder.finish()?;
-
-    let mut e = GzEncoder::new(Vec::new(), Compression::default());
-
+    let mut e = GzEncoder::new(Vec::new(), Compression::best());
     e.write_all(changelog_text.as_bytes()).unwrap();
-    // e.write_str(changelog_text);
     let mut filegz = File::create(CHANGELOG_GZIP).unwrap();
     let compressed_bytes: Vec<u8> = e.finish().unwrap();
     filegz.write_all(&compressed_bytes).unwrap();
